corrected image shifting from previous addition

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 img {
   width: 450px;
-  padding: 50px 10px;
+  padding: 25px 10px;
   border-radius: 25%;
 }
 
